# gnlp

./: .buildconfig  Makefile.am  README.md  autogen.sh  configure.ac  gnlp.doap  org.gnome.Gnlp.flatpak.json
contrib/: Makefile.am
contrib/gnome-desktop/: Makefile.am  cc-common-language.c  cc-common-language.h  configure.ac  gnome-languages.c  gnome-languages.h
daemon/: Makefile.am  gnlp-command-dispatcher.c  gnlp-command-dispatcher.h  gnlp-context.c  gnlp-context.h  gnlp-daemon.c  gnlp-daemon.h  gnlp-dialog-state.c  gnlp-dialog-state.h  gnlp-enum-types.c.template  gnlp-enum-types.h.template  gnlp-factory.c  gnlp-factory.h  gnlp-input-parser.c  gnlp-input-parser.h  gnlp-listener.c  gnlp-listener.h  gnlp-log.c  gnlp-log.h  gnlp-settings.c  gnlp-settings.h  gnlp-speaker.c  gnlp-speaker.h  gnlp-voice-command-parser.c  gnlp-voice-command-parser.h  gnlp-voice-command.c  gnlp-voice-command.h  main.c
data/: Makefile.am  default.jconf  gnlp.gresource.xml  gnlp.pc.in  layout.md  org.gnome.Gnlp.service  org.gnome.Gnlp.service.in  org.gnome.Nlp.service.in
data/languages/: Makefile.am
data/languages/en_US/: config
docs/reference/: Makefile.am  libgnlp-docs.sgml  libgnlp-sections.txt
libgnlp/: Makefile.am  gnlp-client.c  gnlp-client.h  gnlp-dbus-generated-doc-org.gnome.Gnlp.Listener.xml  gnlp-dbus-generated-doc-org.gnome.Gnlp.Settings.xml  gnlp-dbus-generated-doc-org.gnome.Gnlp.Speech.Listener.xml  gnlp-dbus-generated-doc-org.gnome.Gnlp.Speech.Settings.xml  gnlp-dbus-generated-doc-org.gnome.Gnlp.Speech.Speaker.xml  gnlp-dbus-generated-doc-org.gnome.Gnlp.xml  gnlp-language.c  gnlp-language.h  gnlp-utils.c  gnlp-utils.h  gnlp-version.h.in  gnlp-voice.c  gnlp-voice.h  gnlp.h  gnlp.pc.in  org.gnome.Gnlp.xml
m4/: gtk-doc.m4
src/: Makefile.am  gnlp-context.c  gnlp-context.h  gnlp-daemon-worker  gnlp-version.h.in  gnlp.h
src/daemon/: gnlp-client-context.c  gnlp-client-context.h  gnlp-context-manager.c  gnlp-context-manager.h  gnlp-daemon.c  gnlp-daemon.h  gnlp-engine.c  gnlp-engine.h  gnlp-extension.c  gnlp-extension.h  gnlp-operation-capsule.c  gnlp-operation-capsule.h  main.c  org.gnome.Nlp.xml
src/plugins/agenda-event-parser/: agenda-event-parser.plugin  gnlp-agenda-event-parser-generic.c  gnlp-agenda-event-parser-generic.h  gnlp-agenda-event-parser-plugin.c
src/resources/: daemon.gresource.xml
tests/: Makefile.am  test-client.c  test-context.c  test-languages.c  test-speak.c
tools/: Makefile.am
tools/gnlp-language-tool/: Makefile.am  glt-application.c  glt-application.h  glt-view-row.c  glt-view-row.h  glt-view-selector-popover.c  glt-view-selector-popover.h  glt-view.c  glt-view.h  glt-workbench.c  glt-workbench.h  glt.gresource.xml  main.c
tools/gnlp-language-tool/resources/: language-view.ui  selector-row.ui  selector-view.ui  view-row.ui  view-selector-popover.ui  workbench.ui
tools/gnlp-language-tool/views/: glt-language-view.c  glt-language-view.h  glt-selector-row.c  glt-selector-row.h  glt-selector-view.c  glt-selector-view.h
